# database/jwt.go
@@ -64,7 +64,7 @@ func MiddleWare(next http.HandlerFunc) http.Handler {
 // @Success 200 {object} map[string]string
 // @Failure 405 {object} map[string]string
 // @Failure 500 {object} map[string]string
-// @Router /generate-jwt [post]
+// @Router /login [post]
 func API_generateJWT(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPost {
 		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
