# database/user.go
@@ -135,7 +135,7 @@ func Koneksi() *sql.DB {
 		host     = "localhost"
 		port     = 5432
 		user     = "postgres"
-		password = "12460"
+		password = "1230"
 		dbname   = "frozen_food"
 	)
 	
@@ -159,6 +159,7 @@ func Koneksi() *sql.DB {
 // @Success 201 {object} map[string]string
 // @Failure 400 {object} map[string]string
 // @Router /adduser [post]
+// @Security BearerAuth
 func API_add(w http.ResponseWriter, r *http.Request) {
 	var user User
 	err := json.NewDecoder(r.Body).Decode(&user)
@@ -172,6 +173,11 @@ func API_add(w http.ResponseWriter, r *http.Request) {
 	w.Write([]byte(`{"message": "User added successfully"}`))
 }
 
+// @Summary Menampilakan semua user
+// @Tags User
+// @Security BearerAuth
+// @Success 200 {object} map[string]interface{}
+// @Router /selectuser [get]
 func Api_selectAllData(w http.ResponseWriter, r *http.Request) {
 
 	dataUser := Select_alluser()
@@ -247,6 +253,7 @@ func Api_getUserByName(w http.ResponseWriter, r *http.Request) {
 // @Success 204 {string} string "No Content"
 // @Failure 400 {object} map[string]string
 // @Router /deleteuser [delete]
+// @Security BearerAuth
 func Api_deleteUser(w http.ResponseWriter, r *http.Request) {
     var user User
     err := json.NewDecoder(r.Body).Decode(&user)
@@ -283,6 +290,7 @@ func Api_deleteUser(w http.ResponseWriter, r *http.Request) {
 // @Success 204 {string} string "No Content"
 // @Failure 400 {object} map[string]string
 // @Router /updateuser [put]
+// @Security BearerAuth
 func Api_updateUser(w http.ResponseWriter, r *http.Request) {
 	var user User
 	err := json.NewDecoder(r.Body).Decode(&user)
